# stardance-monitor

./: .dockerignore  .gitignore  .wakatime-project  Cargo.toml  Dockerfile  README.md
scripts/: loop.sh  run-every-5min.sh
src/: config.rs  diff.rs  format.rs  main.rs  mrkdwn.rs  scraper.rs
