[package]
name = "stardance_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
color-eyre = "0.6.5"
dashmap = "6.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
envy = "0.4.2"
log = "0.4.29"
once_cell = "1.21.3"
rayon = "1.11.0"
reqwest = { version = "0.12.25", features = ["blocking", "multipart", "json"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slack-morphism = "2.17.0"
sled = "0.34.7"
strum = "0.27.2"
strum_macros = "0.27.2"
sentry = "0.38"
time-format = "1.2.2"
